@@ -291,6 +291,25 @@ dfsch_object_t* dfsch_number_mul(dfsch_object_t* a,
   }else{ 
   fallback:*/
 
+  if (DFSCH_TYPE_OF(a) == DFSCH_TYPE_OF(b) &&
+      DFSCH_TYPE_OF(a) == DFSCH_FIXNUM_TYPE){
+    long an = DFSCH_FIXNUM_REF(a)<<1;
+    long bn = DFSCH_FIXNUM_REF(b);
+    long x = an * bn;
+    double xd = (double)an * (double)bn;
+    
+    if (x == xd){
+      return dfsch_make_number_from_long(x>>1);
+    }else{
+      double d = x > xd ? x - xd : xd - x;
+      double p = xd >= 0 ? xd : -xd;
+      
+      if (32.0 * d <= p){
+	return dfsch_make_number_from_long(x>>1);
+      }
+    }
+  }
+
   return dfsch_make_number_from_double 
     (dfsch_number_to_double((dfsch_object_t*) a) * 
      dfsch_number_to_double((dfsch_object_t*) b)); 
